--- a/productos.html
+++ b/productos.html
@@ -35,19 +35,19 @@
       <ul class="productos">
         <li>
           <h2>Cabello</h2>
-          <img src="img2/cabello.jpg" alt="" />
+          <img class="imgProducto" src="img2/cabello.jpg" alt="" />
           <p class="producto-descripcion">Con tijera o maquina, a gusto del cliente</p>
           <p class="producto-precio">$ 10.00</p>
         </li>
         <li>
           <h2>Barba</h2>
-          <img src="img2/barba.jpg" alt="" />
+          <img class="imgProducto" src="img2/barba.jpg" alt="" />
           <p class="producto-descripcion">Corte y diseño profesional de barba</p>
           <p class="producto-precio">$ 08.00</p>
         </li>
         <li>
           <h2>Cabello + Barba</h2>
-          <img src="img2/cabello+barba.jpg" alt="" />
+          <img class="imgProducto" src="img2/cabello+barba.jpg" alt="" />
           <p class="producto-descripcion">Paquete completo de cabello y barba</p>
           <p class="producto-precio">$ 15.00</p>
         </li>
